Add placeholder code to 400/404 lesson

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -1,1 +1,71 @@
 # 400 Level Responses
+
+## 404
+
+```python  
+@books_bp.route("/<book_id>", methods=["GET"])
+def handle_book(book_id):
+    for book in books:
+        if book.id == book_id:
+            return {
+                "id": book.id,
+                "title": book.title,
+                "description": book.description,
+            }
+
+    return {"message":f"book {book_id} not found"}, 404
+```
+
+## 400
+
+```python  
+@books_bp.route("/<book_id>", methods=["GET"])
+def handle_book(book_id):
+    try:
+        book_id = int(book_id)
+    except:
+        return {"message":f"book {book_id} invalid"}, 400
+
+
+    for book in books:
+        if book.id == book_id:
+            return {
+                "id": book.id,
+                "title": book.title,
+                "description": book.description,
+            }
+
+    return {"message":f"book {book_id} not found"}, 404
+```
+
+## Refactor with Helper function
+
+```python 
+def validate_book(book_id):
+    try:
+        book_id = int(book_id)
+    except:
+        abort(make_response({"message":f"book {book_id} invalid"}, 400))
+
+    found = False
+    for book in books:
+        if book.id == book_id:
+            found = True
+
+    if found is False:
+        abort(make_response({"message":f"book {book_id} not found"}, 404))
+```
+
+```python
+@books_bp.route("/<book_id>", methods=["GET"])
+def handle_book(book_id):
+    validate_book(book_id)
+
+    for book in books:
+        if book.id == book_id:
+            return {
+                "id": book.id,
+                "title": book.title,
+                "description": book.description,
+            }
+```
