Add branches, update format, move callout to 400s lesson

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -1,5 +1,13 @@
 # 400 Level Responses
 
+### !callout-warning
+
+## What About Error Handling?
+
+There are many cases that weren't covered in this lesson, even though they are relevant to creating and reading `Book`s. For example, what happens if we make a `GET` request to `/books/this-book-doesnt-exist`? We are intentionally not covering these cases at the moment, to limit this lesson. However, hypothesize and research how to handle erroneous HTTP requests. Follow your curiosity!
+
+### !end-callout
+
 ## 404
 
 ```python  
