--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -1,18 +1,34 @@
-# 400 Level Responses
+# Error Handling
 
-### !callout-warning
+## VIDEO PLACE HOLDER
 
-## What About Error Handling?
+## Goals
 
-There are many cases that weren't covered in this lesson, even though they are relevant to creating and reading `Book`s. For example, what happens if we make a `GET` request to `/books/this-book-doesnt-exist`? We are intentionally not covering these cases at the moment, to limit this lesson. However, hypothesize and research how to handle erroneous HTTP requests. Follow your curiosity!
+Our goal for this lesson is to learn how handle errors for the `GET` `/books/<book_id>` route.
 
-### !end-callout
+In this lesson we will build our Hello Books API to handle to following error cases for RESTful route `GET` `/books/<book_id>`:
 
-## 404
+1. If there are no `books` with `book_id`, the server will return a `404` response code with a message indicating that there are no `book` with `book_id`. 
+1. If `book_id` is not of type `int`, the server will return a `400` response code with a message indicating `book_id` is invalid.
+
+## Branches
+
+| Starting Branch | Ending Branch|
+|--|--|
+|`02a-read-one-book` |`02b-404`|
+
+## Handling a non-exiting book
+
+Let's examine the error we get to a `GET` request to `/books/100`, a non-exiting book, in our browser.
+
+![The view function did not return a valid response](../assets/api-2-read-error/404_view_function_did_not_return_a_valid_response.png)
+
+We can review our code and reason that the route function `handle_book(book_id)` will implicitly return `None` if `book.id == book_id` is `False` each time through the loop.
 
 ```python  
 @books_bp.route("/<book_id>", methods=["GET"])
 def handle_book(book_id):
+    book_id = int(book_id)
     for book in books:
         if book.id == book_id:
             return {
@@ -20,11 +36,90 @@ def handle_book(book_id):
                 "title": book.title,
                 "description": book.description,
             }
+```
 
+### Handling a non-exiting book: Preperation
+
+To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404` response code.
+
+|Request|Response Status |	Response Body|
+|--|-- | --|
+|`GET` `/books/100`|404 Not Found | {"message" : "book 100 not found"}  |
+
+### Handling a non-exiting book: Code
+
+Our function should return the `404` response if the loop completes without returning.
+
+```python  
     return {"message":f"book {book_id} not found"}, 404
 ```
 
-## 400
+| Piece of Code | Notes |
+|--|--|
+|`return {"message":f"book {book_id} not found"}, 404`|The first part of the return statment, `{"message":f"book {book_id} not found"}`, is the response body in json. The second part of the return statement, `404`, is the response code, |
+
+<details>
+    <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
+
+```python
+@books_bp.route("/<book_id>", methods=["GET"])
+def handle_book(book_id):
+book_id = int(book_id)
+for book in books:
+    if book.id == book_id:
+        return {
+            "id": book.id,
+            "title": book.title,
+            "description": book.description,
+        }
+
+return {"message":f"book {book_id} not found"}, 404
+```
+
+</details>
+
+<br>
+
+We should verify that the we receive the correct response body and code for a non-exiting book. We can do this by making the request in our browser and viewing the server logs.
+
+![404-response](../assets/api-2-read-error/404-response.png)
+
+![404-server-log](../assets/api-2-read-error/404-server-log.png)
+
+## Handling an invalid `book_id`
+
+Let's examine the error we get to a `GET` request to `/books/hello-world`, an invalid `book_id`, in our browser.
+
+![Invalid book_id response in browser](../assets/api-2-read-error/400-invalid-book-error.png)
+
+We can review the error message `ValueError: invalid literal for int() with base 10: 'hello-world'` and our code, and reason that `int(hello_world)` throws a `ValueError`.
+
+### Handling an invalid `book_id`: Preperation
+
+To handle this scenario, we should return a response with a response body indicating that the book with `book_id` is invalid and a `400` response code.
+
+|Request|Response Status |	Response Body|
+|--|-- | --|
+|`GET` `/books/hello-world`|400 Invalid | {"message" : "book hello-world invalid"}  |
+
+### Handling an invalid `book_id`: Code
+
+We can replace the code `book_id = int(book_id)` with a `try/except` that returns a `400` response code in the except if `int(book_id)` throws an error.
+
+```python
+try:
+    book_id = int(book_id)
+except:
+    return {"message":f"book {book_id} invalid"}, 400
+```
+
+| Piece of Code | Notes |
+|--|--|
+|`try: / book_id = int(book_id)`|For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route paramter.|
+|`except: / {"message":f"book {book_id} invalid"}, 400`|For invalid values of `book_id`, this code will return the json response body `{"message":f"book {book_id} invalid"}` and response code `400`.|
+
+<details>
+    <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
 
 ```python  
 @books_bp.route("/<book_id>", methods=["GET"])
@@ -45,8 +140,21 @@ def handle_book(book_id):
 
     return {"message":f"book {book_id} not found"}, 404
 ```
+</details>
+
+We should verify that the we receive the correct response body and code for an invalid `book_id`. We can do this by making the request in our browser and viewing the server logs.
+
+<br>
+
+![400 Browser Response](../assets/api-2-read-error/400-response.png)
+
+![400 Server Log](../assets/api-2-read-error/400-server-log.png)
 
 ## Refactor with Helper function
+
+Our `GET` `/books/<book_id>` endpoint now correctly handles `404` and `400` level responses. We may notice that our `handle_book(book_id)` route function is getting a bit long. 
+
+Let's pull out the error handling logic into a helper function `validate_book(book_id)` that we will call in `handle_book(book_id)`.
 
 ```python 
 def validate_book(book_id):
@@ -55,14 +163,15 @@ def validate_book(book_id):
     except:
         abort(make_response({"message":f"book {book_id} invalid"}, 400))
 
-    found = False
     for book in books:
         if book.id == book_id:
-            found = True
+            return book_id
 
-    if found is False:
-        abort(make_response({"message":f"book {book_id} not found"}, 404))
+    abort(make_response({"message":f"book {book_id} not found"}, 404))
 ```
+
+<details>
+    <summary>Expand for updated <code>handle_book(book_id)</code> code</summary>
 
 ```python
 @books_bp.route("/<book_id>", methods=["GET"])
@@ -77,3 +186,33 @@ def handle_book(book_id):
                 "description": book.description,
             }
 ```
+</details>
+<br>
+
+| New Piece of Code | Notes |
+|--|--|
+|`abort(make_response({"message":f"book {book_id} invalid"}, 400))`|[`abort`](https://flask.palletsprojects.com/en/1.1.x/api/#flask.abort) raises an `HTTPException`. We use [`make_response`](https://flask.palletsprojects.com/en/2.0.x/api/#flask.make_response) to return a Flask [`Response`](https://flask.palletsprojects.com/en/1.1.x/api/#response-objects) and override the default behavior of `abort` to return `html`.|
+|`for book in books:`...|Iterate through the `books` and return the `book_id` if it is in the list.|
+|`abort(make_response({"message":f"book {book_id} not found"}, 404))`|If the loop completes without returning, abort and return a `404` response.|
+
+<!-- prettier-ignore-start -->
+### !challenge
+* type: tasklist
+* id: 03fd0024-7138-44b8-ac7e-a01298cd1dfe
+* title: Handling Errors
+##### !question
+
+Think about the "Getting a Single Book Endpoint."
+
+Check off all the topics that we've briefly touched on so far.
+
+##### !end-question
+##### !options
+
+* Handled a non-exiting book
+* Handled an invalid book_id
+* Refactored our code to use a helper function
+
+##### !end-options
+### !end-challenge
+<!-- prettier-ignore-end -->
