Small updates for clarity

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -8,7 +8,7 @@ Our goal for this lesson is to learn how handle errors for the `GET` `/books/<bo
 
 In this lesson we will build our Hello Books API to handle to following error cases for RESTful route `GET` `/books/<book_id>`:
 
-1. If there are no `books` with `book_id`, the server will return a `404` response code with a message indicating that there are no `book` with `book_id`. 
+1. If there are no `books` with `book_id`, the server will return a `404` response code with a message indicating that there are no `book`s with `book_id`. 
 1. If `book_id` is not of type `int`, the server will return a `400` response code with a message indicating `book_id` is invalid.
 
 ## Branches
@@ -44,7 +44,7 @@ To handle this scenario, we should return a response with a response body indica
 
 |Request|Response Status |	Response Body|
 |--|-- | --|
-|`GET` `/books/100`|404 Not Found | {"message" : "book 100 not found"}  |
+|`GET` `/books/100`|`404` `Not Found` | `{"message" : "book 100 not found"}`  |
 
 ### Handling a non-exiting book: Code
 
@@ -56,7 +56,7 @@ Our function should return the `404` response if the loop completes without retu
 
 | Piece of Code | Notes |
 |--|--|
-|`return {"message":f"book {book_id} not found"}, 404`|The first part of the return statment, `{"message":f"book {book_id} not found"}`, is the response body in json. The second part of the return statement, `404`, is the response code, |
+|`return {"message":f"book {book_id} not found"}, 404`|The first part of the return statment, `{"message":f"book {book_id} not found"}`, is the `JSON` response body. The second part of the return statement, `404`, is the response code. |
 
 <details>
     <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
@@ -100,11 +100,11 @@ To handle this scenario, we should return a response with a response body indica
 
 |Request|Response Status |	Response Body|
 |--|-- | --|
-|`GET` `/books/hello-world`|400 Invalid | {"message" : "book hello-world invalid"}  |
+|`GET` `/books/hello-world`|`400` `Invalid` | `{"message" : "book hello-world invalid"}`|
 
 ### Handling an invalid `book_id`: Code
 
-We can replace the code `book_id = int(book_id)` with a `try/except` that returns a `400` response code in the except if `int(book_id)` throws an error.
+We can replace the code `book_id = int(book_id)` with a `try/except` that returns a `400` response code in the `except` clause if `int(book_id)` throws an error.
 
 ```python
 try:
@@ -128,7 +128,6 @@ def handle_book(book_id):
         book_id = int(book_id)
     except:
         return {"message":f"book {book_id} invalid"}, 400
-
 
     for book in books:
         if book.id == book_id:
@@ -191,7 +190,7 @@ def handle_book(book_id):
 
 | New Piece of Code | Notes |
 |--|--|
-|`abort(make_response({"message":f"book {book_id} invalid"}, 400))`|[`abort`](https://flask.palletsprojects.com/en/1.1.x/api/#flask.abort) raises an `HTTPException`. We use [`make_response`](https://flask.palletsprojects.com/en/2.0.x/api/#flask.make_response) to return a Flask [`Response`](https://flask.palletsprojects.com/en/1.1.x/api/#response-objects) and override the default behavior of `abort` to return `html`.|
+|`abort(make_response({"message":f"book {book_id} invalid"}, 400))`|[`abort`](https://flask.palletsprojects.com/en/1.1.x/api/#flask.abort) raises an `HTTPException`. We use [`make_response`](https://flask.palletsprojects.com/en/2.0.x/api/#flask.make_response) to return a Flask [`Response`](https://flask.palletsprojects.com/en/1.1.x/api/#response-objects) object and override the default behavior of `abort` to return `html`. Follow your curiousity and the documentation links to learn more about `abort`. |
 |`for book in books:`...|Iterate through the `books` and return the `book_id` if it is in the list.|
 |`abort(make_response({"message":f"book {book_id} not found"}, 404))`|If the loop completes without returning, abort and return a `404` response.|
 
@@ -204,13 +203,13 @@ def handle_book(book_id):
 
 Think about the "Getting a Single Book Endpoint."
 
-Check off all the topics that we've briefly touched on so far.
+Check off all code that we implemented in this Lesson.
 
 ##### !end-question
 ##### !options
 
-* Handled a non-exiting book
-* Handled an invalid book_id
+* Handled a non-exiting `book`
+* Handled an invalid `book_id`
 * Refactored our code to use a helper function
 
 ##### !end-options
