--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -164,7 +164,7 @@ def validate_book(book_id):
 
     for book in books:
         if book.id == book_id:
-            return book_id
+            return book
 
     abort(make_response({"message":f"book {book_id} not found"}, 404))
 ```
@@ -175,15 +175,13 @@ def validate_book(book_id):
 ```python
 @books_bp.route("/<book_id>", methods=["GET"])
 def handle_book(book_id):
-    validate_book(book_id)
+    book = validate_book(book_id)
 
-    for book in books:
-        if book.id == book_id:
-            return {
-                "id": book.id,
-                "title": book.title,
-                "description": book.description,
-            }
+    return {
+        "id": book.id,
+        "title": book.title,
+        "description": book.description,
+    }
 ```
 </details>
 <br>
