Add feature to have before lesson to read-one-book and error handling

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -17,6 +17,15 @@ In this lesson we will build our Hello Books API to handle to following error ca
 |--|--|
 |`02a-read-one-book` |`02b-404`|
 
+<details>
+   <summary>Expand to see the features <code>Hello Books API</code> should have before this lesson</summary>
+
+The `GET` `/books` route should be defined
+The `GET` `/books/<book_id>` route should be defined
+
+</details>
+<br>
+
 ## Handling a non-exiting book
 
 Let's examine the error we get to a `GET` request to `/books/100`, a non-exiting book, in our browser.
