add return to code table

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -122,10 +122,10 @@ except:
     return {"message":f"book {book_id} invalid"}, 400
 ```
 
-| Piece of Code                                          | Notes                                                                                                                                          |
-| ------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------- |
-| `try: / book_id = int(book_id)`                        | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route paramter. |
-| `except: / {"message":f"book {book_id} invalid"}, 400` | For invalid values of `book_id`, this code will return the json response body `{"message":f"book {book_id} invalid"}` and response code `400`. |
+| Piece of Code                                                 | Notes                                                                                                                                          |
+| ------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------- |
+| `try: / book_id = int(book_id)`                               | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route paramter. |
+| `except: / return {"message":f"book {book_id} invalid"}, 400` | For invalid values of `book_id`, this code will return the json response body `{"message":f"book {book_id} invalid"}` and response code `400`. |
 
 <details>
     <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
