Fix code indentation and some typos

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -47,7 +47,7 @@ def handle_book(book_id):
             }
 ```
 
-### Handling a non-existing book: Preperation
+### Handling a non-existing book: Preparation
 
 To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404` response code.
 
@@ -65,7 +65,7 @@ Our function should return the `404` response if the loop completes without retu
 
 | Piece of Code                                         | Notes                                                                                                                                                                                |
 | ----------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `return {"message":f"book {book_id} not found"}, 404` | The first part of the return statment, `{"message":f"book {book_id} not found"}`, is the `JSON` response body. The second part of the return statement, `404`, is the response code. |
+| `return {"message":f"book {book_id} not found"}, 404` | The first part of the return statement, `{"message":f"book {book_id} not found"}`, is the `JSON` response body. The second part of the return statement, `404`, is the response code. |
 
 <details>
     <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
@@ -73,16 +73,16 @@ Our function should return the `404` response if the loop completes without retu
 ```python
 @books_bp.route("/<book_id>", methods=["GET"])
 def handle_book(book_id):
-book_id = int(book_id)
-for book in books:
-    if book.id == book_id:
-        return {
-            "id": book.id,
-            "title": book.title,
-            "description": book.description,
-        }
+    book_id = int(book_id)
+    for book in books:
+        if book.id == book_id:
+            return {
+                "id": book.id,
+                "title": book.title,
+                "description": book.description,
+            }
 
-return {"message":f"book {book_id} not found"}, 404
+    return {"message":f"book {book_id} not found"}, 404
 ```
 
 </details>
@@ -103,7 +103,7 @@ Let's examine the error we get to a `GET` request to `/books/hello-world`, an in
 
 We can review the error message `ValueError: invalid literal for int() with base 10: 'hello-world'` and our code, and reason that `int(hello_world)` throws a `ValueError`.
 
-### Handling an invalid `book_id`: Preperation
+### Handling an invalid `book_id`: Preparation
 
 To handle this scenario, we should return a response with a response body indicating that the book with `book_id` is invalid and a `400` response code.
 
@@ -124,7 +124,7 @@ except:
 
 | Piece of Code                                                 | Notes                                                                                                                                          |
 | ------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------- |
-| `try: / book_id = int(book_id)`                               | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route paramter. |
+| `try: / book_id = int(book_id)`                               | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route parameter. |
 | `except: / return {"message":f"book {book_id} invalid"}, 400` | For invalid values of `book_id`, this code will return the json response body `{"message":f"book {book_id} invalid"}` and response code `400`. |
 
 <details>
@@ -199,7 +199,7 @@ def handle_book(book_id):
 
 | New Piece of Code                                                    | Notes                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | -------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `abort(make_response({"message":f"book {book_id} invalid"}, 400))`   | [`abort`](https://flask.palletsprojects.com/en/1.1.x/api/#flask.abort) raises an `HTTPException`. We use [`make_response`](https://flask.palletsprojects.com/en/2.0.x/api/#flask.make_response) to return a Flask [`Response`](https://flask.palletsprojects.com/en/1.1.x/api/#response-objects) object and override the default behavior of `abort` to return `html`. Follow your curiousity and the documentation links to learn more about `abort`. |
+| `abort(make_response({"message":f"book {book_id} invalid"}, 400))`   | [`abort`](https://flask.palletsprojects.com/en/1.1.x/api/#flask.abort) raises an `HTTPException`. We use [`make_response`](https://flask.palletsprojects.com/en/2.0.x/api/#flask.make_response) to return a Flask [`Response`](https://flask.palletsprojects.com/en/1.1.x/api/#response-objects) object and override the default behavior of `abort` to return `html`. Follow your curiosity and the documentation links to learn more about `abort`. |
 | `for book in books:`...                                              | Iterate through the `books` and return the `book_id` if it is in the list.                                                                                                                                                                                                                                                                                                                                                                             |
 | `abort(make_response({"message":f"book {book_id} not found"}, 404))` | If the loop completes without returning, abort and return a `404` response.                                                                                                                                                                                                                                                                                                                                                                            |
 
