introductory paragraph grammar fixes

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -4,11 +4,11 @@
 
 ## Goals
 
-Our goal for this lesson is to learn how handle errors for the `GET` `/books/<book_id>` route.
+Our goal for this lesson is to learn how to handle errors for the `GET`&nbsp;`/books/<book_id>` route.
 
-In this lesson we will build our Hello Books API to handle to following error cases for RESTful route `GET` `/books/<book_id>`:
+In this lesson we will extend our Hello Books API to handle the following error cases for the RESTful route `GET` `/books/<book_id>`:
 
-1. If there are no `books` with `book_id`, the server will return a `404` response code with a message indicating that there are no `book`s with `book_id`.
+1. If no `book` record matches the `book_id`, the server will return a `404` response code with a message indicating that there are no `book`s with `book_id`.
 1. If `book_id` is not of type `int`, the server will return a `400` response code with a message indicating `book_id` is invalid.
 
 ## Branches
