remove auto-formatted spacing and add guards to prevent it coming back

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -63,9 +63,11 @@ Our function should return the `404` response if the loop completes without retu
     return {"message":f"book {book_id} not found"}, 404
 ```
 
-| Piece of Code                                         | Notes                                                                                                                                                                                |
-| ----------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+<!-- prettier-ignore-start -->
+| Piece of Code | Notes |
+| ------------- | ----- |
 | `return {"message":f"book {book_id} not found"}, 404` | The first part of the return statement, `{"message":f"book {book_id} not found"}`, is the `JSON` response body. The second part of the return statement, `404`, is the response code. |
+<!-- prettier-ignore-end -->
 
 <details>
     <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
@@ -122,10 +124,12 @@ except:
     return {"message":f"book {book_id} invalid"}, 400
 ```
 
-| Piece of Code                                                 | Notes                                                                                                                                          |
-| ------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------- |
-| `try: / book_id = int(book_id)`                               | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route parameter. |
+<!-- prettier-ignore-start -->
+| Piece of Code | Notes |
+| ------------- | ----- |
+| `try: / book_id = int(book_id)` | For valid values of `book_id`, this code will convert the `book_id` to an `int`. `book_id` is initially a string since it it a route parameter. |
 | `except: / return {"message":f"book {book_id} invalid"}, 400` | For invalid values of `book_id`, this code will return the json response body `{"message":f"book {book_id} invalid"}` and response code `400`. |
+<!-- prettier-ignore-end -->
 
 <details>
     <summary>Expand to see the complete <code>handle_book(book_id)</code> function</summary>
@@ -201,10 +205,14 @@ def handle_book(book_id):
 </details>
 <br>
 
-| New Piece of Code                                                    | Notes                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| -------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+<!-- prettier-ignore-start -->
+| New Piece of Code | Notes |
+| ----------------- | ----- |
 |`from flask import Blueprint, jsonify, abort, make_response`|Add `abort` and `make_response` to the import list. These functions are defined in the next row of this table.|
 | `abort(make_response({"message":f"book {book_id} invalid"}, 400))` | [`abort`](https://flask.palletsprojects.com/en/1.1.x/api/#flask.abort) raises an `HTTPException`. We use [`make_response`](https://flask.palletsprojects.com/en/2.0.x/api/#flask.make_response) to return a Flask [`Response`](https://flask.palletsprojects.com/en/1.1.x/api/#response-objects) object and override the default behavior of `abort` to return `html`. Follow your curiosity and the documentation links to learn more about `abort`. |
+| `for book in books:`... | Iterate through the `books` and return the `book_id` if it is in the list. |
+| `abort(make_response({"message":f"book {book_id} not found"}, 404))` | If the loop completes without returning, abort and return a `404` response. |
+<!-- prettier-ignore-end -->
 
 <!-- prettier-ignore-start -->
 ### !challenge
