--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -20,8 +20,8 @@ In this lesson we will extend our Hello Books API to handle the following error 
 <details>
    <summary>Expand to see the features <code>Hello Books API</code> should have before this lesson</summary>
 
-The `GET` `/books` route should be defined
-The `GET` `/books/<book_id>` route should be defined
+- The `GET` `/books` route should be defined
+- The `GET` `/books/<book_id>` route should be defined
 
 </details>
 <br>
