update error image with new error message

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -31,9 +31,10 @@ In this lesson we will extend our Hello Books API to handle the following error 
 
 ## Handling a non-existing book
 
-Let's examine the error we get to a `GET` request to `/books/100`, a non-existing book, in our browser.
+Let's examine the error we receive for a `GET` request to `/books/100`, a non-existing book, in our browser.
 
-![The view function did not return a valid response](../assets/api-2-read-error/404_view_function_did_not_return_a_valid_response.png)
+![The view function did not return a valid response](../assets/api-2-read-error/404_view_function_did_not_return_a_valid_response.png)  
+*Fig. Error displayed by Flask in Debug mode when accessing non-existing book. ([Original Image](../assets/api-2-read-error/404_view_function_did_not_return_a_valid_response.png))*
 
 We can review our code and reason that the route function `handle_book(book_id)` will implicitly return `None` if `book.id == book_id` is `False` each time through the loop.
 
