include callout to be sure to run in debug mode

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -36,6 +36,18 @@ Let's examine the error we receive for a `GET` request to `/books/100`, a non-ex
 ![The view function did not return a valid response](../assets/api-2-read-error/404_view_function_did_not_return_a_valid_response.png)  
 *Fig. Error displayed by Flask in Debug mode when accessing non-existing book. ([Original Image](../assets/api-2-read-error/404_view_function_did_not_return_a_valid_response.png))*
 
+### !callout-info
+
+## Error Details Appear Only in Debug Mode
+
+If your browser displays a generic error message like `Internal Server Error` instead of the detailed error message shown above, stop your Flask server with `⌃C` (`Ctrl+C`), then restart it in debug mode with the command
+
+<br />
+
+`flask run --debug`
+
+### !end-callout
+
 We can review our code and reason that the route function `handle_book(book_id)` will implicitly return `None` if `book.id == book_id` is `False` each time through the loop.
 
 ```python
