updates to understanding the error message

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -48,11 +48,17 @@ If your browser displays a generic error message like `Internal Server Error` in
 
 ### !end-callout
 
-We can review our code and reason that the route function `handle_book(book_id)` will implicitly return `None` if `book.id == book_id` is `False` each time through the loop.
+We receive an error message that should resemble the following.
+
+> TypeError: The view function for 'books_bp.get_one_book' did not return a valid response. The function either returned None or ended without a return statement.
+
+Reviewing the error message, we can see that the error is a `TypeError`. This alone doesn't tell us much, but the next part of the error message is more informative. The error message states that the view function for `books_bp.get_one_book` did not return a valid response. Specifically, it either returned `None` or ended without a return statement (in which case, Python still behaves as though the function returned `None`).
+
+This is really helpful information! From the error message, we know that we should take a look at the `get_one_book` function that we registered on the `books_bp` blueprint. Here's our code:
 
 ```python
-@books_bp.route("/<book_id>", methods=["GET"])
-def handle_book(book_id):
+@books_bp.get("/<book_id>")
+def get_one_book(book_id):
     book_id = int(book_id)
     for book in books:
         if book.id == book_id:
@@ -62,6 +68,8 @@ def handle_book(book_id):
                 "description": book.description,
             }
 ```
+
+There is a single explicit `return` in this function, but we only reach it if the condition `book.id == book_id` is `True`. That is, we need to find a book with a matching ID in order for the `return` to execute. If we never find a book with a matching ID, the loop will complete without returning anything. As we know, in Python, a function that completes without an explicit `return` statement behaves like it returned `None`.
 
 ### Handling a non-existing book: Preparation
 
