explains why we are using code 404

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -73,11 +73,7 @@ There is a single explicit `return` in this function, but we only reach it if th
 
 ### Handling a non-existing book: Preparation
 
-To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404` response code.
-
-| Request            | Response Status   | Response Body                        |
-| ------------------ | ----------------- | ------------------------------------ |
-| `GET` `/books/100` | `404` `Not Found` | `{"message" : "book 100 not found"}` |
+To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404` response code, which is the standard code to indicate that a resource was not found.
 
 ### Handling a non-existing book: Code
 
