"rotates" the the endpoint table so that we only need two columns

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -75,6 +75,14 @@ There is a single explicit `return` in this function, but we only reach it if th
 
 To handle this scenario, we should return a response with a response body indicating that the book with `book_id` was not found and a `404` response code, which is the standard code to indicate that a resource was not found.
 
+<!-- prettier-ignore-start -->
+| Endpoint Detail | Notes |
+| ------- | ------- |
+| Request | `GET /books/100` |
+| Response Status | `404 Not Found` |
+| Response Body | `{"message" : "book 100 not found"}` |
+<!-- prettier-ignore-end -->
+
 ### Handling a non-existing book: Code
 
 Our function should return the `404` response if the loop completes without returning.
