explicitly describes using a tuple to specify a response code

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -85,7 +85,9 @@ To handle this scenario, we should return a response with a response body indica
 
 ### Handling a non-existing book: Code
 
-Our function should return the `404` response if the loop completes without returning.
+When we return a dictionary value to be converted to JSON, Flask will automatically set the response code to `200`. Flask provides a few ways to set a different response code. For basic cases, Flask lets us return a tuple containing a response body dictionary and a response code.
+
+So to return a `404` response if the loop completes without returning, we can add a `return` statement after the loop like this:
 
 ```python
     return {"message":f"book {book_id} not found"}, 404
