declutters explanation table by using more pieces

--- a/api-2-read-404s/400-and-404s.md
+++ b/api-2-read-404s/400-and-404s.md
@@ -96,7 +96,9 @@ So to return a `404` response if the loop completes without returning, we can ad
 <!-- prettier-ignore-start -->
 | Piece of Code | Notes |
 | ------------- | ----- |
-| `return {"message":f"book {book_id} not found"}, 404` | The first part of the return statement, `{"message":f"book {book_id} not found"}`, is the `JSON` response body. The second part of the return statement, `404`, is the response code. |
+| `return ..., ...` | The comma means that this is returning a `tuple` of two values. Remember that it's not parentheses that make a `tuple` literal, but rather a comma. |
+| `{"message":`&ZeroWidthSpace;`f"book {book_id} not found"}` | The first value in the `tuple`, `{"message":f"book {book_id} not found"}`, is the dictionary that will become the `JSON` response body. |
+| `404` | The second value in the `tuple`, `404`, is the response code. |
 <!-- prettier-ignore-end -->
 
 <details>
